# math

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: complex.hpp  complex_plane.hpp  det.hpp  linear_equations.hpp  math.cpp  matrix.hpp  numerical_table.hpp  sequence.hpp
test/: CMakeLists.txt
test/test_complex/: CMakeLists.txt  main.cpp
test/test_det/: CMakeLists.txt  main.cpp
test/test_linearmatrix/: CMakeLists.txt  main.cpp
test/test_matrix/: CMakeLists.txt  main.cpp
test/test_numerical_table/: CMakeLists.txt  CMakeLists.txt~  CmakeLists.txt~  main.cpp
